fixed overflow on mobile devices

--- a/project_1/css/index.css
+++ b/project_1/css/index.css
@@ -15,8 +15,12 @@
 
 body {
   font-family: "Lato", sans-serif;
-  overflow-x: hidden !important;
   color: white;
+}
+
+.root {
+  overflow-x: hidden;
+  position: relative;
 }
 
 header {
